Fixed Responsive Gap

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -10,7 +10,14 @@ code {
 	white-space:normal;
 }
 
-
+#sidebar {
+ul {
+	margin: 0;
+}
+li {
+	list-style: none;
+}
+}
 
 
 
